<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/image_main_screen"
        android:contentDescription="@string/age_png" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_thin"
        android:gravity="center"
        android:text="@string/calculate_your"
        android:textColor="@color/textColour"
        android:textSize="25sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_thin"
        android:gravity="center"
        android:text="AGE"
        android:textColor="@color/textColour"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_thin"
        android:gravity="center"
        android:text="In Minutes"
        android:textColor="@color/textColour"
        android:textSize="25sp" />
    <Button
        android:id="@+id/date_pick_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_date"
        android:textColor="@color/textColour"
        android:background="@drawable/round_border"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_thin"
        android:gravity="center"
        android:text="@string/selected_date"
        android:textColor="@color/shadowColour"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/selectedDateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/_02_08_1999"
        android:textColor="@color/textColour"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_thin"
        android:gravity="center"
        android:text="@string/minutes"
        android:textColor="@color/shadowColour"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/minutesText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/_1400000"
        android:textColor="@color/textColour"
        android:textSize="16sp" />






</LinearLayout>